List width fixed for large screens. Scrollbar removed (#18)

--- a/ng/src/app/components/item-filter/item-filter.component.css
+++ b/ng/src/app/components/item-filter/item-filter.component.css
@@ -1,4 +1,3 @@
 #filter {
-  margin: 1rem 1rem 0rem 1rem;
-  width: min(100%, 100vw - 1.5rem);
+  width: 100%
 }
