--- a/ng/src/app/components/toolbar/toolbar.component.css
+++ b/ng/src/app/components/toolbar/toolbar.component.css
@@ -1,7 +1,3 @@
-div {
-  height: 3rem;
-}
-
-.spacer {
+#spacer {
   flex: 1 1 auto
 }
